--- a/src/main/resources/docker/docker-compose.yml
+++ b/src/main/resources/docker/docker-compose.yml
@@ -1,12 +1,23 @@
-version: '3.4'
+version: '3.9'
 services:
   mysql:
     hostname: mysql
     image: 'mysql:latest'
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: LETICIAn2
       MYSQL_DATABASE: shelter
+  service:
+    image: shelter
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/shelter
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: LETICIAn2
+      depends_on:
+      mysql:
+      condition: service_started
